force-app/main/default/objects/Bi_Weekly_Reimbursement__c/Bi_Weekly_Reimbursement__c.object-meta.xml
<CustomObject>
    <label>Bi Weekly Reimbursement</label>
    <nameField>
        <label>Bi Weekly Reimbursement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bi Weekly Reimbursements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>