force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Actual_Mileages__c.field-meta.xml
<CustomField>
    <fullName>Actual_Mileages__c</fullName>
    <label>Actual Mileages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>