force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Bi_Weekly_Variable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bi_Weekly_Variable_Amount__c</fullName>
    <formula>Total_Approved__c * Total_Variable_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bi Weekly Variable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>