force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Confirm_Drive_Time__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Drive_Time__c</fullName>
    <label>Confirm Drive Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>