force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Confirm_Hours__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Hours</label>
    <type>Checkbox</type>
</CustomField>