force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Confirm_Hours_Time__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Hours_Time__c</fullName>
    <label>Confirm Hours Time</label>
    <type>DateTime</type>
</CustomField>