force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Confirm_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Total_Hours__c</fullName>
    <label>Confirm Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>