force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bi Weekly Reimbursements</relationshipLabel>
    <relationshipName>Bi_Weekly_Reimbursements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>