force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Contact_Id_Deactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id_Deactivated_Date__c</fullName>
    <formula>Contact__r.Deactivated_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Id Deactivated Date</label>
    <type>Date</type>
</CustomField>