force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Contact_Id_External_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id_External_Email__c</fullName>
    <formula>Contact__r.External_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Id External Email</label>
    <type>Text</type>
</CustomField>