force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Contact_Id_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id_Name__c</fullName>
    <formula>Contact__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Id Name</label>
    <type>Text</type>
</CustomField>