force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Count_Error_Check__c.field-meta.xml
<CustomField>
    <fullName>Count_Error_Check__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count Error Check</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>