force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/EmpIdEmailStartdateEnddate__c.field-meta.xml
<CustomField>
    <fullName>EmpIdEmailStartdateEnddate__c</fullName>
    <label>EmpIdEmailStartdateEnddate</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>