force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Employee_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Employee_Reimbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Reimbursement</label>
    <referenceTo>Employee_Reimbursement__c</referenceTo>
    <relationshipLabel>Bi Weekly Reimbursements</relationshipLabel>
    <relationshipName>Bi_Weekly_Reimbursements</relationshipName>
    <type>Lookup</type>
</CustomField>