force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Error_Hours__c.field-meta.xml
<CustomField>
    <fullName>Error_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error Hours</label>
    <type>Checkbox</type>
</CustomField>