force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Fuel_Price__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Price__c</fullName>
    <label>Fuel Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>