force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Fuel_Variable_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Variable_Rate__c</fullName>
    <formula>IF(Contact__r.MPG__c == 0, 0, Fuel_Price__c / Contact__r.MPG__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fuel Variable Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>