force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/IRS_Mileage_Rate__c.field-meta.xml
<CustomField>
    <fullName>IRS_Mileage_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IRS Mileage Rate</label>
    <referenceTo>IRS_Mileage_Rate__c</referenceTo>
    <relationshipLabel>Bi Weekly Reimbursements</relationshipLabel>
    <relationshipName>Bi_Weekly_Reimbursements</relationshipName>
    <type>Lookup</type>
</CustomField>