force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/LOA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>LOA_End_Date__c</fullName>
    <label>LOA End Date</label>
    <type>Date</type>
</CustomField>