force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Maintenance__c</fullName>
    <formula>Contact__r.Maintenance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>