force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Mileage_Approver__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Approver__c</fullName>
    <label>Mileage Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>