force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Mileage_Lock_Date__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Lock_Date__c</fullName>
    <label>Mileage Lock Date</label>
    <type>Date</type>
</CustomField>