force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Month_State_City__c.field-meta.xml
<CustomField>
    <fullName>Month_State_City__c</fullName>
    <formula>IF( TEXT(MONTH(Start_Date__c)) = TEXT(01) , Contact__r.MailingCity + &apos;&apos; + Contact__r.MailingState + &apos;&apos;+ TEXT(MONTH(Start_Date__c)+11) +&apos;&apos;+ TEXT(YEAR(Start_Date__c)), Contact__r.MailingCity + &apos;&apos; + Contact__r.MailingState + &apos;&apos;+ TEXT(MONTH(Start_Date__c)-1) +&apos;&apos;+ TEXT(YEAR(Start_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month State City</label>
    <type>Text</type>
</CustomField>