force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Monthly_Fixed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fixed_Amount__c</fullName>
    <label>Monthly Fixed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>