force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Net_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Net_Reimbursement__c</fullName>
    <formula>Total_Mileages_after_Deduction__c *  Maintenance_and_Tires__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Reimbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>