force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Number_of_Trips__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Trips__c</fullName>
    <label>Number of Trips</label>
    <summaryForeignKey>Employee_Mileage__c.Bi_Weekly_Reimbursement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>