force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Sync_1_Mileages__c.field-meta.xml
<CustomField>
    <fullName>Sync_1_Mileages__c</fullName>
    <label>Sync 1 Mileages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>