force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Sync_2_Hours__c.field-meta.xml
<CustomField>
    <fullName>Sync_2_Hours__c</fullName>
    <label>Sync 2 Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>