force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Sync_3_Drive_Time__c.field-meta.xml
<CustomField>
    <fullName>Sync_3_Drive_Time__c</fullName>
    <label>Sync 3 Drive Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>