force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Total_Mileages_after_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Total_Mileages_after_Deduction__c</fullName>
    <formula>Total_Approved_Pending_Mileage__c - ( Working_Days__c *    Mileage_for_deduct__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Mileages after Deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>