force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Total_Mileages_For_Deduct__c.field-meta.xml
<CustomField>
    <fullName>Total_Mileages_For_Deduct__c</fullName>
    <formula>Working_Days__c *  Mileage_for_deduct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Mileages For Deduct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>