force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Total_Monthly_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Reimbursement__c</fullName>
    <formula>Half_Fixed_Amount__c  + Total_Monthly_Approved_Variable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monthly Reimbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>