force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Total_Monthly_Unapproved_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Unapproved_Reimbursement__c</fullName>
    <formula>IF(Total_Monthly_Upapproved_Variable__c &lt;&gt; 0, Fixed_Amount__c + Total_Monthly_Upapproved_Variable__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monthly Unapproved Reimbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>