force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Total_Reimbursement_after_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Total_Reimbursement_after_Deduction__c</fullName>
    <formula>Variable_Amount_after_Deduction__c +  Fixed_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Reimbursement after Deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>