force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Total_Stay_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Stay_Time__c</fullName>
    <label>Total Stay Time</label>
    <summarizedField>Employee_Mileage__c.Stay_Time__c</summarizedField>
    <summaryForeignKey>Employee_Mileage__c.Bi_Weekly_Reimbursement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>