force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Total_Variable_Rate__c.field-meta.xml
<CustomField>
    <fullName>Total_Variable_Rate__c</fullName>
    <formula>Fuel_Variable_Rate__c + Maintenance_and_Tires__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Variable Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>