force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Variable_Amount_after_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Variable_Amount_after_Deduction__c</fullName>
    <formula>Total_Monthly_Approved_Variable__c - Variable_Amount_for_Deduct_Mileage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variable Amount after Deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>