force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Variable_Amount_for_Deduct_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Variable_Amount_for_Deduct_Mileage__c</fullName>
    <formula>Total_Variable_Rate__c *  Total_Mileages_after_Deduction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variable Amount for Deduct Mileage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>