force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/variable_rate__c.field-meta.xml
<CustomField>
    <fullName>variable_rate__c</fullName>
    <formula>IF(UPPER(Contact__r.Account.Name) == UPPER(&apos;GPS (General Production Service)&apos;),0.1502*Total_Mileage__c,Fuel_Variable_Rate__c + Maintenance_and_Tires__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>variable rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>