force-app/main/default/objects/Bi_Weekly_Reimbursement__c/fields/Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Working_Days__c</fullName>
    <label>Working Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>